test_suite/tests/ui/with-variant/skip_de_struct_field.stderr
error: variant `Struct` cannot have both #[serde(deserialize_with)] and a field `f1` marked with #[serde(skip_deserializing)]
  --> $DIR/skip_de_struct_field.rs:12:10
   |
12 | #[derive(Deserialize)]
   |          ^^^^^^^^^^^

error: aborting due to previous error

